[package]
name = "slang-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "slang"
path = "./src/main.rs"
test = true
bench = false

[dependencies]
structopt = "0.3.25"
home = "0.5.3"
futures = "0.3.19"
clap-verbosity-flag="0.3.2"
console="0.15.0"
serde = { version = "1.0.132", features = ["derive"] }
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
config = { version="0.11.0", features= ["toml"] }
